kubernetes-labs/lab-29-istio-fault-injection/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-29-fault-injection
  labels:
    istio-injection: enabled
